--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,8 @@
 body {
   background-color: honeydew; }
+
+#container {
+  border: 2px solid red; }
+  #container .card {
+    border: 2px solid blue;
+    padding: 10px; }
