--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,15 +7,21 @@ body{
 #container{
   border: 2px solid red;
 
-  .card{
-    border: 2px solid blue;
-    padding: 10px;
+}
 
-    .title{
+.card{
+  border: 2px solid blue;
+  padding: 10px;
+}
 
-      .score{
+.title{
 
-      }
-    }
-  }
+}
+
+.score{
+
+}
+
+.thumbnail{
+
 }
