--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,23 @@
 body {
   background-color: honeydew; }
 
+header {
+  background-color: white; }
+  header .logo {
+    width: 115px; }
+
 #container {
-  border: 2px solid red; }
+  border: 2px solid red;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: space-around; }
 
 .card {
   border: 2px solid blue;
-  padding: 10px; }
+  margin: 25px;
+  max-width: 25%; }
+
+.panel-heading {
+  font-size: 30px;
+  text-align: center; }
